samples/_failures_safe/1761394500_ffc28e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdc3649f.c: In function ‘main’:
./samples/SAFE/__tmp_bdc3649f.c:159:12: error: missing terminating " character
  159 |     printf("Enter expression to tokenize:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bdc3649f.c:159:5: error: expected expression at end of input
  159 |     printf("Enter expression to tokenize:
      |     ^~~~~~
./samples/SAFE/__tmp_bdc3649f.c:159:5: error: expected declaration or statement at end of input
